<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SAC 17</string>
    <string name="internet_required">Internet connection is required to use app</string>
    <string name="item_home">Home</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection, please try again</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="photos">Photos</string>
    <string name="schedule">Schedule</string>
    <string name="competitions">Competitions</string>
    <string name="sponsors">Sponsors</string>
    <string name="hotel">Hotel</string>
    <string name="banquet">Banquet</string>
    <string name="faq">FAQ</string>
    <string name="photo">Add Photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="permisson_required">Permission Required</string>
    <string name="camera_storage_permission_required">Camera and Storage permission are required to take photos</string>
    <string name="settings">Settings</string>
    <string name="uploading_photo">Uploading Photo</string>
    <string name="please_wait">Please Wait</string>
    <string name="caption">Caption</string>
    <string name="add_a_caption">Add a caption (optional):</string>
    <string name="sac17">SAC17!</string>
    <string name="upload">Upload</string>
    <string name="photo_uploaded">Your photo will be visible after approval!</string>
    <string name="shuttles">Shuttles</string>
    <string name="nearby">Who\'s Nearby?</string>
    <string name="my_profile">My Profile</string>
    <string name="phone">Phone</string>
    <string name="tap_and_hold_to_change_photo">Tap and hold to change photo</string>
    <string name="snapchat">Snapchat</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="collabratec">Collabratec</string>
    <string name="share_my_info">Share my Info</string>
    <string name="find_nearby">Find Others</string>
    <string name="vote">Vote</string>
    <string name="vote_tshirt">Vote for a T-Shirt</string>
    <string name="vote_project">Vote for a Project</string>
    <string name="loading_voting">Loading Items</string>

</resources>
