<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="org.rowanieee.sac.NearbyActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/accent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/background_splash"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text=""
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImage" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text=""
            app:layout_constraintLeft_toLeftOf="@+id/name"
            app:layout_constraintRight_toRightOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/phone"
            android:drawableStart="@drawable/ic_phone_wrapped"
            android:drawableLeft="@drawable/ic_phone_wrapped"
            android:drawablePadding="10dp"
            android:inputType="phone"
            app:layout_constraintLeft_toLeftOf="@+id/email"
            app:layout_constraintRight_toRightOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tap_and_hold_to_change_photo"
            app:layout_constraintLeft_toLeftOf="@+id/textView"
            app:layout_constraintRight_toRightOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintLeft_toLeftOf="@+id/phone"
            app:layout_constraintRight_toRightOf="@+id/phone"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            android:id="@+id/linearLayout"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <EditText
                android:id="@+id/snapchat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_snapchat_wrapped"
                android:drawableLeft="@drawable/ic_snapchat_wrapped"
                android:ems="10"
                android:hint="@string/snapchat"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:inputType="textPersonName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone" />

            <EditText
                android:id="@+id/instagram"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_instagram_wrapped"
                android:drawableLeft="@drawable/ic_instagram_wrapped"
                android:ems="10"
                android:hint="@string/instagram"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintLeft_toLeftOf="@+id/phone"
            app:layout_constraintRight_toRightOf="@+id/phone"
            app:layout_constraintHorizontal_bias="0.504"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:id="@+id/linearLayout2"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <EditText
                android:id="@+id/twitter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.5"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_twitter_wrapped"
                android:drawableLeft="@drawable/ic_twitter_wrapped"
                android:ems="10"
                android:hint="@string/twitter"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/collabratec"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="0.5"
                android:hint="@string/collabratec"
                android:drawableStart="@drawable/ic_collabratec_wrapped"
                android:drawableLeft="@drawable/ic_collabratec_wrapped"
                android:drawablePadding="10dp"
                android:inputType="textPersonName" />

        </LinearLayout>

        <Button
            android:id="@+id/connect"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/share_my_info"
            app:layout_constraintLeft_toLeftOf="@+id/phone"
            app:layout_constraintRight_toRightOf="@+id/phone"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/find"
            android:visibility="gone"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/find_nearby"
            app:layout_constraintLeft_toLeftOf="@+id/phone"
            app:layout_constraintRight_toRightOf="@+id/phone"
            app:layout_constraintTop_toBottomOf="@+id/connect" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/others"
            app:layout_constraintLeft_toLeftOf="@+id/phone"
            app:layout_constraintRight_toRightOf="@+id/phone"
            app:layout_constraintTop_toBottomOf="@+id/connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>
    </android.support.constraint.ConstraintLayout>
</ScrollView>