<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/background_splash"
        app:civ_border_color="@color/accent"
        app:civ_border_width="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/name"
        app:layout_constraintRight_toRightOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_phone_wrapped"
        android:drawableLeft="@drawable/ic_phone_wrapped"
        android:ems="10"
        android:hint="@string/phone"
        app:layout_constraintLeft_toLeftOf="@+id/email"
        app:layout_constraintRight_toRightOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintLeft_toLeftOf="@+id/phone"
        app:layout_constraintRight_toRightOf="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/phone">

        <TextView
            android:id="@+id/snapchat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="0.5"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_snapchat_wrapped"
            android:drawableLeft="@drawable/ic_snapchat_wrapped"
            android:ems="10"
            android:hint="@string/snapchat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone" />

        <TextView
            android:id="@+id/instagram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_instagram_wrapped"
            android:drawableLeft="@drawable/ic_instagram_wrapped"
            android:ems="10"
            android:hint="@string/instagram" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="@+id/phone"
        app:layout_constraintRight_toRightOf="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/twitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="0.5"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_twitter_wrapped"
            android:drawableLeft="@drawable/ic_twitter_wrapped"
            android:ems="10"
            android:hint="@string/twitter" />

        <TextView
            android:id="@+id/collabratec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_collabratec_wrapped"
            android:drawableLeft="@drawable/ic_collabratec_wrapped"
            android:ems="10"
            android:hint="@string/collabratec" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</android.support.constraint.ConstraintLayout>